--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -75,152 +75,95 @@
 \date{30 July 1999}
 \maketitle
 \begin{abstract}
-This paper provides a sample of a LaTeX document for final submission
-to Sigkdd Explorations, the official newsletter of ACM Sigkdd. This is
-a modified version of the ACM Proceedings sample file.
-
-The developers have tried to include every imaginable sort
-of ``bells and whistles", such as a subtitle, footnotes on
-title, subtitle and authors, as well as in the text, and
-every optional component (e.g. Acknowledgements, Additional
-Authors, Appendices), not to mention examples of
-equations, theorems, tables and figures.
-
-To make best use of this sample document, run it through \LaTeX\
-and BibTeX, and compare this source code with the printed
-output produced by the dvi file.
+TODO
 \end{abstract}
 
 \section{Introduction}
-The \textit{proceedings} are the records of a conference.
-ACM seeks to give these conference by-products a uniform,
-high-quality appearance.  To do this, ACM has some rigid
-requirements for the format of the proceedings documents: there
-is a specified format (balanced  double columns), a specified
-set of fonts (Arial or Helvetica and Times Roman) in
-certain specified sizes (for instance, 9 point for body copy),
-a specified live area (18 $\times$ 23.5 cm [7" $\times$ 9.25"]) centered on
-the page, specified size of margins (2.54cm [1"] top and
-bottom and 1.9cm [.75"] left and right; specified column width
-(8.45cm [3.33"]) and gutter size (.083cm [.33"]).
+As part of graduate course Deep learning for healthcare, we
+have decided to reproduce and improve current research on COVID-19 classification using
+X-ray.
 
-The good news is, with only a handful of manual
-settings\footnote{Two of these, the {\texttt{\char'134 numberofauthors}}
-and {\texttt{\char'134 alignauthor}} commands, you have
-already used; another, {\texttt{\char'134 balancecolumns}}, will
-be used in your very last run of \LaTeX\ to ensure
-balanced column heights on the last page.}, the \LaTeX\ document
-class file handles all of this for you.
 
-The remainder of this document is concerned with showing, in
-the context of an ``actual'' document, the \LaTeX\ commands
-specifically available for denoting the structure of a
-proceedings paper, rather than with giving rigorous descriptions
-or explanations of such commands.
+\section{Motivation}
+COVID-19 pandemic has ravaged the world on an unprecedented scale. It has caused loss
+of millions of lives and long lasting damages on surviving patients. X-ray imaging
+is very important part of diagnosis of Covid-19 and other pneumonia and is often the
+first-line diagnosis in many cases. Using deep learning for X-ray classification is
+an ongoing research area. We have taken this paper to strengthen our understanding of
+deep learning models and improve the current research.
 
-\section{The Body of The Paper}
-Typically, the body of a paper is organized
-into a hierarchical structure, with numbered or unnumbered
-headings for sections, subsections, sub-subsections, and even
-smaller sections.  The command \texttt{{\char'134}section} that
-precedes this paragraph is part of such a
-hierarchy.\footnote{This is the second footnote.  It
-starts a series of three footnotes that add nothing
-informational, but just give an idea of how footnotes work
-and look. It is a wordy one, just so you see
-how a longish one plays out.} \LaTeX\ handles the numbering
-and placement of these headings for you, when you use
-the appropriate heading commands around the titles
-of the headings.  If you want a sub-subsection or
-smaller part to be unnumbered in your output, simply append an
-asterisk to the command name.  Examples of both
-numbered and unnumbered headings will appear throughout the
-balance of this sample document.
 
-Because the entire article is contained in
-the \textbf{document} environment, you can indicate the
-start of a new paragraph with a blank line in your
-input file; that is why this sentence forms a separate paragraph.
+\section{Literature Survey}
 
-\subsection{Type Changes and Special Characters}
-We have already seen several typeface changes in this sample.  You
-can indicate italicized words or phrases in your text with
-the command \texttt{{\char'134}textit}; emboldening with the
-command \texttt{{\char'134}textbf}
-and typewriter-style (for instance, for computer code) with
-\texttt{{\char'134}texttt}.  But remember, you do not
-have to indicate typestyle changes when such changes are
-part of the \textit{structural} elements of your
-article; for instance, the heading of this subsection will
-be in a sans serif\footnote{A third footnote, here.
-Let's make this a rather short one to
-see how it looks.} typeface, but that is handled by the
-document class file. Take care with the use
-of\footnote{A fourth, and last, footnote.}
-the curly braces in typeface changes; they mark
-the beginning and end of
-the text that is to be in the different typeface.
+\subsection{COVID-19 classification using chest CT}
 
-You can use whatever symbols, accented characters, or
-non-English characters you need anywhere in your document;
-you can find a complete list of what is
-available in the \textit{\LaTeX\
-User's Guide}\cite{Lamport:LaTeX}.
+X. Bai and Wang were able to create an AI system that could differentiate
+COVID-19 and other pneumonia using a chest CT scan. They approached this
+as a classification problem and used the EfficientNet B4 architecture which
+was a CNN based network. They were able to achieve results of 96\% accuracy,
+95\% sensitivity , 96\% specificity, and an area under receiver operating
+characteristic curve of 0.95 and an area under the precision recall curve of
+0.90. When compared with radiologists on the same test dataset, the AI system
+performed better. This study concluded that the AI can support radiologists
+in detection of Covid 19 in Chest CT images.
 
-\subsection{Math Equations}
-You may want to display math equations in three distinct styles:
-inline, numbered or non-numbered display.  Each of
-the three are discussed in the next sections.
+\subsection{Focal loss for dense object detection}
+Lin T, Goyal P, Girshick R propose Focal loss, a modification to the standard cross
+entropy criterion that focuses weights for loss on hard examples versus well
+classified examples. This is accomplished by adding a factor $(1 - p_t)^\gamma$ to the
+standard cross entropy criterion where setting $\gamma  > 0$ reduces the relative loss 
+for well-classified examples $(p_t > .5)$. This results in achieving higher accuracy 
+than using the standard cross entropy loss and surpassed speed and accuracy when 
+compared with state of the art two stage detectors; Faster R CNN Variants.
 
-\subsubsection{Inline (In-text) Equations}
-A formula that appears in the running text is called an
-inline or in-text formula.  It is produced by the
-\textbf{math} environment, which can be
-invoked with the usual \texttt{{\char'134}begin. . .{\char'134}end}
-construction or with the short form \texttt{\$. . .\$}. You
-can use any of the symbols and structures,
-from $\alpha$ to $\omega$, available in
-\LaTeX\cite{Lamport:LaTeX}; this section will simply show a
-few examples of in-text equations in context. Notice how
-this equation: \begin{math}\lim_{n\rightarrow \infty}x=0\end{math},
-set here in in-line math style, looks slightly different when
-set in display style.  (See next section).
 
-\subsubsection{Display Equations}
-A numbered display equation -- one set off by vertical space
-from the text and centered horizontally -- is produced
-by the \textbf{equation} environment. An unnumbered display
-equation is produced by the \textbf{displaymath} environment.
+\subsection{Towards contactless patient positioning}
+This paper discussed about patient positioning routine that comprised a novel robust 
+dynamic fusion (RDF) algorithm for accurate 3D patient body modeling. 
+With ‘multi-modal’ inference capability, RDF can be trained once and used across 
+different applications (without re-training). They have used multiple CNN branches 
+o learn the joint feature representation and a fully-connected parameter regressor 
+module to estimate the 3D mesh parameters.
 
-Again, in either environment, you can use any of the symbols
-and structures available in \LaTeX; this section will just
-give a couple of examples of display equations in context.
-First, consider the equation, shown as an inline equation above:
-\begin{equation}\lim_{n\rightarrow \infty}x=0\end{equation}
-Notice how it is formatted somewhat differently in
-the \textbf{displaymath}
-environment.  Now, we'll enter an unnumbered equation:
-\begin{displaymath}\sum_{i=0}^{\infty} x + 1\end{displaymath}
-and follow it with another numbered equation:
-\begin{equation}\sum_{i=0}^{\infty}x_i=\int_{0}^{\pi+2} f\end{equation}
-just to demonstrate \LaTeX's able handling of numbering.
 
-\subsection{Citations}
-Citations to articles \cite{bowman:reasoning, clark:pct, braams:babel, herlihy:methodology},
-conference
-proceedings \cite{clark:pct} or books \cite{salas:calculus, Lamport:LaTeX} listed
-in the Bibliography section of your
-article will occur throughout the text of your article.
-You should use BibTeX to automatically produce this bibliography;
-you simply need to insert one of several citation commands with
-a key of the item cited in the proper location in
-the \texttt{.tex} file \cite{Lamport:LaTeX}.
-The key is a short reference you invent to uniquely
-identify each work; in this sample document, the key is
-the first author's surname and a
-word from the title.  This identifying key is included
-with each item in the \texttt{.bib} file for your article.
+\subsection{Deep learning COVID-19 features on CXR using limited training data sets}
+The authors of this paper, proposed a patch-based convolutional neural network approach
+with a relatively small number of trainable parameters for Covid-19 diagnosis.
+The architecture contains first pre-processed data that are fed into a segmentation
+network [FC-DenseNet] to extract lung areas. From this segmented lung area, classification
+network is used to classify the corresponding diseases using a patch-by-patch training
+and inferences [ResNet-18 (pre-trained) and many ResNet-18 models are used for K patches],
+final decision is made based on the majority voting from previous layers. A Grad-CAM
+saliency map is calculated to provide an interpretable result. This method has an accuracy
+of 91.9\%, compared to that of 92.4\% for COVID-Net.
 
+\subsection{COVID19-Net Deep Convolutional Neural Network}
+
+This is the first open source network design for COVID-19 detection from CXR images,
+our final research paper also considers this as its baseline for experiments.
+This paper considered COVIDx dataset which contains 13,975 CXR images for training and
+experiments. COVID-Net architecture makes heavy use of a lightweight residual
+‘projection expansion projection extension’ (PPEX) design pattern that contains multiple
+levels of convolution layers with fully connected layers and a softmax at the end.
+COVID-Net achieved higher test accuracy than other architectures such as VGG-19 and ResNet-50.
+
+\subsection{Noise-robust framework for automatic segmentation of COVID-19 from CT images}
+
+This is a CNN model developed to be effective with detection of COVID-19 lesions from 
+CT images that have a lot of noise. This paper discusses how Wang et al developed a
+novel noise-robust learning framework based on self-ensembling of CNNs.  To better
+deal with the complex lesions, a novel COVID-19 Pneumonia Lesion segmentation network
+(COPLE-Net) was proposed that uses a combination of max-pooling and average pooling to
+reduce information loss during downsampling, and employs bridge layers to alleviate the
+semantic gap between features in the encoder and decoder. Experimental results with CT
+images of 558 COVID-19 patients showed the effectiveness of the noise-robust Dice loss
+function, COPLE-Net and adaptive self-ensembling in learning from noisy labels for COVID-19
+pneumonia lesion segmentation. To make the training process robust against noisy labels,
+a novel noise-robust Dice loss function was proposed and integrated into a self-ensembling
+framework, where an adaptive teacher and an adaptive student are introduced to further improve
+the performance in dealing with noisy labels. The experiments used 2D CNNs for slice-by-slice
+segmentation, and implemented COPLE-Net, 1 LNR-Dice and the adaptive self-ensembling framework
+in Pytorch with the PyMIC 3 library on a Ubuntu desktop with an NVIDIA GTX 1080 Ti GPU. 
 The details of the construction of the \texttt{.bib} file
 are beyond the scope of this sample document, but more
 information can be found in the \textit{Author's Guide},
@@ -362,17 +305,11 @@ use the \texttt{{\char'134}newtheorem} or the
 \texttt{{\char'134}newdef} command,
 respectively, to create it.
 
-\subsection*{A Caveat for the \TeX\ Expert}
-Because you have just been given permission to
-use the \texttt{{\char'134}newdef} command to create a
-new form, you might think you can
-use \TeX's \texttt{{\char'134}def} to create a
-new command: \textit{Please refrain from doing this!}
-Remember that your \LaTeX\ source code is primarily intended
-to create camera-ready copy, but may be converted
-to other forms -- e.g. HTML. If you inadvertently omit
-some or all of the \texttt{{\char'134}def}s recompilation will
-be, to say the least, problematic.
+\section{Experimental Setup}
+AWS (custom cluster/SageMaker)
+pandas 
+Pytorch
+
 
 \section{Conclusions}
 This paragraph will end the body of this sample document.
