--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -168,11 +168,11 @@ in Pytorch with the PyMIC 3 library on a Ubuntu desktop with an NVIDIA GTX 1080 
 The proposed COPLE-Net was compared with four state-of-the-art networks for semantic or medical
 image segmentation
 
-\begin{itemize}
+\begin{enumerate}
        \item 3D nnU-Net that is extended from 3D U-Net
        \item Attention U-Net 3) ScSE U-Net
        \item ESPNetv2 and proven to be most effective with noisy images.
-\end{itemize}
+\end{enumerate}
 
 In addition, COPLE-Net was compared with three variants: COPLE-Net (-A), COPLE-Net (-D)
 and COPLE-Net (-B) 
@@ -190,6 +190,24 @@ and COPLE-Net (-B)
 % reference more than one work \cite{herlihy:methodology,bowman:reasoning}.
 % A complete list of all citation commands available is
 % given in the \textit{Author's Guide}.
+
+\subsection{Data}
+
+The following datasets that we are considering for this project:
+\begin{enumerate}
+       
+\item Covid Chest X-ray (CCX) dataset: This dataset contains COVID-19 pneumonia images 
+as well few X-ray images from other classes. The dataset can be obtained from 
+github at this link   https://github.com/ieee8023/covid-chestxray-dataset
+\item Kaggle Chest X-ray (KCX) dataset: This dataset contains normal, bacterial pneumonia, 
+and nov-COVID-19 viral pneumonia. The dataset can be obtained from Kaggle at this 
+link https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia
+\end{enumerate}
+
+
+In the FLANNEL paper, 5508 chest x-ray images across 2874 independent patient cases. Both dataset contains anteroposterior (AP) and posteroanterior (PA) view.
+
+ As done in the research paper, we will include  both AP and PA views. Due to AP and PA views being different types of X-ray images, horizontal flips and random noise will be used to convert PA into AP view. 
 
 \subsection{Tables}
 Because tables cannot be split across pages, the best
