Four authors in a row

--- a/draft/sigkddExp.cls
+++ b/draft/sigkddExp.cls
@@ -243,7 +243,7 @@
 % \and was modified to count the number of authors.  GKMT 12 Aug 1999
 \def\alignauthor{%                  % \begin{tabular}
 \end{tabular}%
-  \begin{tabular}[t]{p{\auwidth}}\centering}%
+  \begin{tabular}[t]{p{4cm}}\centering}%
 
 %  *** NOTE *** NOTE *** NOTE *** NOTE ***
 %  If you have 'font problems' then you may need
@@ -290,7 +290,7 @@
 
 \def\email#1{{{\eaddfnt{\vskip 4pt#1}}}}
 
-\def\addauthorsection{\ifnum\originalaucount>3
+\def\addauthorsection{\ifnum\originalaucount>4
     \section{Additional Authors}\the\addauthors
   \fi}
 
