--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -58,6 +58,9 @@
 % e-mail address. Additionally, tag each line of
 % affiliation/address with \affaddr, and tag the
 %% e-mail address with \email.
+\alignauthor Maneesh Kumar Singh\\
+\affaddr{University of Illinois at Urbana-Champaign}\\
+\email{mksingh4@illinois.edu}
 \alignauthor Raman Walwyn-Venugopal\\
 \affaddr{University of Illinois at Urbana-Champaign}\\
 \email{rsw2@illinois.edu}
@@ -68,9 +71,7 @@
 \affaddr{University of Illinois at Urbana-Champaign}\\
 \email{sbs7@illinois.edu}
 }
-\additionalauthors{Maneesh Kumar Singh
-(University of Illinois at Urbana-Champaign,
-email: {\texttt{mksingh4@illinois.edu}})}
+
 \date{30 July 1999}
 \maketitle
 \begin{abstract}
